RESOLVED FIXED187869
Occasional crash under -[WKFormInputSession setSuggestions:]
https://bugs.webkit.org/show_bug.cgi?id=187869
Summary Occasional crash under -[WKFormInputSession setSuggestions:]
Tim Horton
Reported 2018-07-20 13:44:26 PDT
Occasional crash under -[WKFormInputSession setSuggestions:]
Attachments
Patch (2.24 KB, patch)
2018-07-20 13:44 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2018-07-20 13:44:47 PDT
Tim Horton
Comment 2 2018-07-20 13:45:12 PDT
WebKit Commit Bot
Comment 3 2018-07-20 14:28:08 PDT
Comment on attachment 345479 [details] Patch Clearing flags on attachment: 345479 Committed r234067: <https://trac.webkit.org/changeset/234067>
WebKit Commit Bot
Comment 4 2018-07-20 14:28:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.