Occasional crash under -[WKFormInputSession setSuggestions:] https://bugs.webkit.org/show_bug.cgi?id=187869 <rdar://problem/41357063>

Reviewed by Dean Jackson.

* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView inputDelegate]):
Make inputDelegate weak.


Canonical link: https://commits.webkit.org/203056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234067 268f45cc-cd09-0410-ab3c-d52691b4dbfc